# Brack-Engine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/: pull_request_template.md
lib/Box2d/: CMakeLists.txt
lib/Box2d/include/box2d/: b2_settings.h
lib/FMod/include/: fmod.cs
lib/SDL/include/SDL2/: SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_hints.h  SDL_image.h  SDL_joystick.h
outfacingInterfaces/: BrackEngine.cpp  BrackEngine.hpp  CollisionCategory.hpp  CollisionMask.hpp  Config.cpp  Config.hpp  ConfigSingleton.hpp  Entity.hpp  GameEngine.cpp  GameEngine.hpp  GameObject.cpp  GameObject.hpp  IComponent.hpp  IComponentStorage.hpp  ISystem.hpp  Milliseconds.hpp  RandomGenerator.hpp  SaveLoad.hpp  Scene.cpp  Scene.hpp  Text.cpp  Text.hpp  UIObject.cpp  UIObject.hpp  library.h  test.cpp  test.hpp
outfacingInterfaces/BehaviourScripts/: BehaviourScript.cpp  BehaviourScript.hpp  IBehaviourScript.hpp
outfacingInterfaces/Components/: AIComponent.hpp  AnimationComponent.hpp  AudioComponent.hpp  BehaviourScript.cpp  BehaviourScript.hpp  BoxCollisionComponent.hpp  ButtonComponent.hpp  CameraComponent.hpp  ChildComponent.hpp  CircleCollisionComponent.hpp  CircleComponent.hpp  ClickableComponent.hpp  CollisionComponent.hpp  GraphComponent.hpp  IBehaviourScript.hpp  IComponent.hpp  InputTag.hpp  ObjectInfoComponent.hpp  ParentComponent.hpp  ParticleComponent.hpp  ParticleEmitterComponent.hpp  PersistenceTag.hpp  RectangleComponent.hpp  RigidBodyComponent.hpp  SoundEffectComponent.hpp  SoundTrackComponent.hpp  SpriteComponent.hpp  TextComponent.hpp  TileMapComponent.hpp  TransformComponent.hpp  UIComponent.hpp  VelocityComponent.hpp
outfacingInterfaces/Components/Archetypes/: AudioArchetype.hpp  CollisionArchetype.hpp  RenderArchetype.hpp
outfacingInterfaces/Engine Managers/: InputManager.cpp  InputManager.hpp  ReplayManager.cpp  ReplayManager.hpp  SceneManager.cpp  SceneManager.hpp
outfacingInterfaces/EngineManagers/: CollisionLayerManager.hpp  InputManager.cpp  InputManager.hpp  ReplayManager.hpp  SceneManager.cpp  SceneManager.hpp
outfacingInterfaces/Graph/: GraphEdge.hpp  GraphNode.hpp
outfacingInterfaces/Helpers/: Alignment.hpp  CollisionSide.hpp  CollisionType.hpp  Color.hpp  InputState.hpp  KeyMap.hpp  MouseMap.hpp  UserLogger.hpp  Vector2.cpp  Vector2.hpp
outfacingInterfaces/Objects/: Button.cpp  Button.hpp  Camera.cpp  Camera.hpp  GameObject.cpp  GameObject.hpp  Graph.hpp  Scene.cpp  Scene.hpp  Text.hpp  UIObject.cpp  UIObject.hpp
src/: BrackEngine.cpp  ConfigSingleton.cpp  ConfigSingleton.hpp  FPSSingleton.cpp  FPSSingleton.hpp  GameObjectConverter.cpp  GameObjectConverter.hpp  Logger.cpp  Logger.hpp  SaveLoad.cpp  library.cpp
src/Components/: ComponentVisitor.cpp  ComponentVisitor.hpp  IComponentVisitor.cpp  IComponentVisitor.hpp  RenderArchetypeVisitor.hpp
src/EngineManagers/: CollisionLayerManager.cpp  InputManager.cpp  InputManager.hpp  ReplayManager.cpp  ReplayManager.hpp  SceneManager.cpp  SceneManager.hpp
src/Helpers/: GraphNodeWrapper.cpp  GraphNodeWrapper.hpp  UserLogger.cpp  Vector2.cpp
src/LoadFactories/: CameraComponentLoad.cpp  CameraComponentLoad.h  IComponentLoad.h  LoadParser.cpp  LoadParser.h  SpriteComponentLoad.cpp  SpriteComponentLoad.h  TextComponentLoad.cpp  TextComponentLoad.h
src/Managers/: ReplayManager.cpp
src/Managers/Components/: ComponentStore.cpp  SparseSet.cpp
src/Managers/Entities/: BehaviourScriptStore.cpp  ComponentStore.cpp  EntityManager.cpp
src/Managers/Systems/: SystemManager.cpp
src/Objects/: Button.cpp  Camera.cpp  GameObject.cpp  Graph.cpp  Scene.cpp  Text.cpp  UIObject.cpp
src/Systems/: AISystem.cpp  AISystem.hpp  AnimationSystem.cpp  AnimationSystem.hpp  AudioSystem.cpp  AudioSystem.hpp  BehaviourScriptSystem.cpp  BehaviourScriptSystem.hpp  ClickSystem.cpp  ClickSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  InputSystem.cpp  InputSystem.hpp  LoadSystem.cpp  LoadSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderingSystem.cpp  RenderingSystem.hpp  ReplaySystem.cpp  ReplaySystem.hpp  SaveSystem.cpp  SaveSystem.hpp  TimerSystem.cpp  TimerSystem.hpp
src/Wrappers/: AudioWrapper.cpp  AudioWrapper.hpp  ContactListener.cpp  ContactListener.hpp  FPSWrapper.cpp  FPSWrapper.hpp  InputWrapper.cpp  InputWrapper.hpp  PhysicsWrapper.cpp  PhysicsWrapper.hpp  RenderWrapper.cpp  RenderWrapper.hpp  SDL2Wrapper.cpp  SDL2Wrapper.hpp
src/includes/: BehaviourScriptStore.hpp  ComponentStore.hpp  EntityManager.hpp  SparseSet.hpp  SystemManager.hpp
